--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="orange">#FFA500</color>
     <color name="verson">#888888</color>
     <color name="transfer">#00000000</color>
+    <color name="bgbottom">#4A82B5</color>
 </resources>
