--- a/app/src/main/res/layout/fragment_gdcl.xml
+++ b/app/src/main/res/layout/fragment_gdcl.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#EAF1F9">
     <LinearLayout
+        android:id="@+id/ll_gdcl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/gdtb_title"
         android:gravity="center_vertical">
         <CheckBox
+            android:id="@+id/cb_gdcl"
             android:layout_marginLeft="5px"
+            android:text="全选"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
-            android:layout_width="200px"
+            android:layout_marginLeft="3px"
+            android:layout_width="180px"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="问题标题"
             android:textSize="16sp"
             android:textColor="@color/white"/>
         <TextView
+            android:layout_marginLeft="1px"
             android:layout_width="150px"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -28,13 +35,15 @@
             android:textSize="16sp"
             android:textColor="@color/white"/>
         <TextView
-            android:layout_width="200px"
+            android:layout_marginLeft="1px"
+            android:layout_width="180px"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="联系电话"
             android:textSize="16sp"
             android:textColor="@color/white"/>
         <TextView
+            android:layout_marginLeft="1px"
             android:layout_width="250px"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -42,6 +51,7 @@
             android:textSize="16sp"
             android:textColor="@color/white"/>
         <TextView
+            android:layout_marginLeft="1px"
             android:layout_width="170px"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -49,6 +59,7 @@
             android:textSize="16sp"
             android:textColor="@color/white"/>
         <TextView
+            android:layout_marginLeft="23px"
             android:layout_width="170px"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -61,13 +72,16 @@
         android:id="@+id/listview_gdcl"
         android:divider="@drawable/dash_listview_divier"
         android:dividerHeight="2dp"
+        android:layerType="software"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        >
     </ListView>
     <LinearLayout
+        android:paddingBottom="0dp"
         android:layout_width="match_parent"
-        android:layout_height="80px"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="bottom"
         android:gravity="center">
