--- a/app/src/main/res/layout/activity_add_wwyt.xml
+++ b/app/src/main/res/layout/activity_add_wwyt.xml
@@ -44,7 +44,7 @@
                 <TextView
                     android:layout_gravity="center"
                     android:layout_width="140px"
-                    android:layout_height="100px"
+                    android:layout_height="match_parent"
                     android:background="#3E87CC"
                     android:text="岗位"
                     android:gravity="center"
@@ -54,7 +54,7 @@
                     />
                <TextView
                    android:layout_width="580px"
-                   android:layout_height="100px"
+                   android:layout_height="match_parent"
                    android:background="@drawable/tv_bg"/>
             </LinearLayout>
 
@@ -71,7 +71,7 @@
                     <TextView
                         android:layout_gravity="center"
                         android:layout_width="140px"
-                        android:layout_height="100px"
+                        android:layout_height="match_parent"
                         android:background="#3E87CC"
                         android:text="流程"
                         android:gravity="center"
@@ -81,7 +81,7 @@
                         />
                     <TextView
                         android:layout_width="580px"
-                        android:layout_height="100px"
+                        android:layout_height="match_parent"
                         android:background="@drawable/tv_bg"/>
                 </LinearLayout>
 
@@ -97,7 +97,7 @@
                         <TextView
                             android:layout_gravity="center"
                             android:layout_width="140px"
-                            android:layout_height="100px"
+                            android:layout_height="match_parent"
                             android:background="#3E87CC"
                             android:text="制度"
                             android:gravity="center"
@@ -107,7 +107,7 @@
                             />
                         <TextView
                             android:layout_width="580px"
-                            android:layout_height="100px"
+                            android:layout_height="match_parent"
                             android:background="@drawable/tv_bg"/>
                     </LinearLayout>
 
@@ -123,7 +123,7 @@
                             <TextView
                                 android:layout_gravity="center"
                                 android:layout_width="140px"
-                                android:layout_height="100px"
+                                android:layout_height="match_parent"
                                 android:background="#3E87CC"
                                 android:text="标准"
                                 android:gravity="center"
@@ -133,7 +133,7 @@
                                 />
                             <TextView
                                 android:layout_width="580px"
-                                android:layout_height="100px"
+                                android:layout_height="match_parent"
                                 android:background="@drawable/tv_bg"/>
                         </LinearLayout>
 
@@ -148,7 +148,7 @@
                                 <TextView
                                     android:layout_gravity="center"
                                     android:layout_width="140px"
-                                    android:layout_height="100px"
+                                    android:layout_height="match_parent"
                                     android:background="#3E87CC"
                                     android:text="考核"
                                     android:gravity="center"
@@ -158,7 +158,7 @@
                                     />
                                 <TextView
                                     android:layout_width="580px"
-                                    android:layout_height="100px"
+                                    android:layout_height="match_parent"
                                     android:background="@drawable/tv_bg"/>
                             </LinearLayout>
 
