--- a/app/src/main/res/layout/activity_txxj.xml
+++ b/app/src/main/res/layout/activity_txxj.xml
@@ -1,33 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:background="#EAF1F9"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-<Button
-    android:id="@+id/btn_open_ble"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="打开蓝牙"/>
-    <Button
-        android:id="@+id/btn_search_ble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="搜索设备"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="未配对设备"/>
-    <ListView
-        android:id="@+id/lv_unmatched"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"></ListView>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="已配对设备"/>
-    <ListView
-        android:id="@+id/lv_matched"
+        android:layout_height="90px">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/xxbg_toolbar"
+            android:scaleType="fitXY"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/ib_txxj_back"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/transfer"
+                android:src="@drawable/btn_back"/>
+            <TextView
+                android:id="@+id/tv_txxj_top"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#348580"
+                android:layout_gravity="center_vertical"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:layout_marginLeft="130px"
+                android:id="@+id/tv_txxj_notice"
+                android:layout_marginRight="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="     0"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:background="@drawable/tip"/>
+        </LinearLayout>
+    </FrameLayout>
+    <RadioGroup
+        android:id="@+id/txxj_rg"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"></ListView>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/tag_sbgd">
+
+        <RadioButton
+            android:button="@null"
+            android:clickable="true"
+            android:background="@drawable/xxbg_radio"
+            android:id="@+id/rb_txxj_xjyw"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:text="巡检业务"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/white"/>
+        <RadioButton
+            android:button="@null"
+            android:clickable="true"
+            android:background="@drawable/xxbg_radio"
+            android:id="@+id/rb_txxj_cqjyw"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:text="春秋检业务"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/white"/>
+        <RadioButton
+            android:button="@null"
+            android:clickable="true"
+            android:background="@drawable/xxbg_radio"
+            android:id="@+id/rb_txxj_fxwt"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:text="发现问题"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/white"/>
+        <RadioButton
+            android:button="@null"
+            android:clickable="true"
+            android:background="@drawable/xxbg_radio"
+            android:id="@+id/rb_txxj_gzzd"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:text="规章制度和标准规范"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/white"/>
+
+    </RadioGroup>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager_txxj"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+    </android.support.v4.view.ViewPager>
 </LinearLayout>
