--- a/app/src/main/res/layout/fragment_xjyw_default.xml
+++ b/app/src/main/res/layout/fragment_xjyw_default.xml
@@ -2,10 +2,104 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="@color/black"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="90px"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@color/black">
+        <TextView
+            android:layout_width="1px"
+            android:layout_height="match_parent" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:text="巡检单位"
+            android:background="@drawable/gdtb_down_bg" />
+        <TextView
+            android:layout_marginLeft="2px"
+            android:background="@drawable/gdtb_down_bg"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:text="通信站"/>
+        <TextView
+            android:layout_marginLeft="2px"
+            android:background="@drawable/gdtb_down_bg"
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:text="检查时间"/>
+        <TextView
+            android:layout_marginLeft="2px"
+            android:background="@drawable/gdtb_down_bg"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:text="检查负责人"/>
+        <TextView
+            android:layout_marginLeft="2px"
+            android:background="@drawable/gdtb_down_bg"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:text="状态"/>
+        <TextView
+            android:layout_marginLeft="2px"
+            android:background="@drawable/gdtb_down_bg"
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:text="巡检类型"/>
+        <TextView
+            android:layout_marginLeft="2px"
+            android:background="@drawable/gdtb_down_bg"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:text="操作"
+            >
+        </TextView>
+        <TextView
+            android:layout_width="3px"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="@color/black"/>
     <ListView
         android:id="@+id/lv_xjyw_default"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:dividerHeight="2px"
         android:divider="@color/black"
         ></ListView>
