--- a/app/src/main/res/layout/xjyw_common_layout.xml
+++ b/app/src/main/res/layout/xjyw_common_layout.xml
@@ -11,13 +11,9 @@
         <TextView
             android:layout_marginLeft="38px"
             android:id="@+id/tv_xjyw_xjdw"
-            android:layout_width="wrap_content"
-            android:layout_height="60px"
             android:text="巡检单位:"
-            android:textColor="#3171AF"
-            android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textSize="18sp"/>
+            style="@style/text_view_title_style"/>
         <EditText
             android:layout_toRightOf="@id/tv_xjyw_xjdw"
             android:id="@+id/spi_xjyw_xjdw"
@@ -28,19 +24,15 @@
             android:layout_marginLeft="38px"
             android:id="@+id/tv_xjyw_txz"
             android:layout_toRightOf="@id/spi_xjyw_xjdw"
-            android:layout_width="wrap_content"
-            android:layout_height="60px"
             android:text="通信站:"
-            android:textColor="#3171AF"
-            android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textSize="18sp"/>
+            style="@style/text_view_title_style"/>
         <Spinner
             android:layout_toRightOf="@id/tv_xjyw_txz"
             android:id="@+id/spi_xjyw_txz"
             android:layout_width="480px"
             android:layout_height="60px"
-            android:background="@drawable/gdtb_spinner"/>
+            style="@style/spinner_style"/>
 
 
         <TextView
@@ -48,13 +40,9 @@
             android:layout_below="@id/spi_xjyw_txz"
             android:layout_alignRight="@id/tv_xjyw_xjdw"
             android:id="@+id/tv_xjyw_jcfzr"
-            android:layout_width="wrap_content"
-            android:layout_height="60px"
             android:text="检查负责人:"
-            android:textColor="#3171AF"
-            android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textSize="18sp"/>
+            style="@style/text_view_title_style"/>
         <EditText
             android:layout_marginTop="10px"
             android:layout_below="@id/spi_xjyw_txz"
@@ -90,13 +78,9 @@
             android:layout_below="@id/spi_xjyw_txz"
             android:id="@+id/tv_xjyw_zhi"
             android:layout_toRightOf="@id/spi_xjyw_jcsj"
-            android:layout_width="wrap_content"
-            android:layout_height="60px"
             android:text="至:"
-            android:textColor="#3171AF"
-            android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textSize="18sp"/>
+            style="@style/text_view_title_style"/>
         <TextView
             android:layout_marginTop="10px"
             android:layout_below="@id/spi_xjyw_txz"
