--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,4 +59,27 @@
         <item name="android:maxHeight">58dip</item>
 
     </style>
+
+    <style name="spinner_style">
+        <item name="android:background">@drawable/gdtb_spinner</item>
+    </style>
+
+    <style name="text_view_title_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">60px</item>
+        <item name="android:textColor">#3171AF</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="yellow_button_style">
+        <item name="android:layout_marginTop">25px</item>
+        <item name="android:layout_width">200px</item>
+        <item name="android:layout_height">70px</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">#FF9900</item>
+    </style>
 </resources>
