新增春秋检

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="verson">#888888</color>
     <color name="transfer">#00000000</color>
     <color name="bgbottom">#4A82B5</color>
+    <color name="button_blue">#546FB4</color>
 </resources>
