--- a/app/src/main/res/layout/activity_txxj.xml
+++ b/app/src/main/res/layout/activity_txxj.xml
@@ -5,51 +5,9 @@
     android:background="#EAF1F9"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="90px">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/xxbg_toolbar"
-            android:scaleType="fitXY"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageButton
-                android:id="@+id/ib_txxj_back"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@color/transfer"
-                android:src="@drawable/btn_back"/>
-            <TextView
-                android:id="@+id/tv_txxj_top"
-                android:layout_marginLeft="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textColor="#348580"
-                android:layout_gravity="center_vertical"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"/>
-            <TextView
-                android:layout_marginLeft="130px"
-                android:id="@+id/tv_txxj_notice"
-                android:layout_marginRight="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="     0"
-                android:textColor="@color/white"
-                android:gravity="center"
-                android:textSize="18sp"
-                android:background="@drawable/tip"/>
-        </LinearLayout>
-    </FrameLayout>
+
+    <include layout="@layout/base_title_bar"/>
+
     <RadioGroup
         android:id="@+id/txxj_rg"
         android:layout_width="match_parent"
@@ -58,57 +16,29 @@
         android:background="@drawable/tag_sbgd">
 
         <RadioButton
-            android:button="@null"
-            android:clickable="true"
-            android:background="@drawable/xxbg_radio"
             android:id="@+id/rb_txxj_xjyw"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
             android:text="巡检业务"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textColor="@color/white"/>
+            style="@style/base_radio_tab"/>
         <RadioButton
-            android:button="@null"
-            android:clickable="true"
-            android:background="@drawable/xxbg_radio"
             android:id="@+id/rb_txxj_cqjyw"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
             android:text="春秋检业务"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textColor="@color/white"/>
+            style="@style/base_radio_tab"/>
         <RadioButton
-            android:button="@null"
-            android:clickable="true"
-            android:background="@drawable/xxbg_radio"
             android:id="@+id/rb_txxj_fxwt"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
             android:text="发现问题"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textColor="@color/white"/>
+            style="@style/base_radio_tab"/>
         <RadioButton
-            android:button="@null"
-            android:clickable="true"
-            android:background="@drawable/xxbg_radio"
             android:id="@+id/rb_txxj_gzzd"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
             android:text="规章制度和标准规范"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textColor="@color/white"/>
+            style="@style/base_radio_tab"/>
 
     </RadioGroup>
     <android.support.v4.view.ViewPager
