--- a/app/src/main/res/layout/dialog_add_cqjyw.xml
+++ b/app/src/main/res/layout/dialog_add_cqjyw.xml
@@ -119,6 +119,7 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/start"
         style="@style/yellow_button_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
