--- a/app/src/main/res/layout/fragment_lc.xml
+++ b/app/src/main/res/layout/fragment_lc.xml
@@ -5,11 +5,24 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-<ImageView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <ImageView
     android:layout_gravity="center_horizontal"
-    android:layout_width="700px"
-    android:layout_height="match_parent"
-    android:scaleType="fitXY"
-    android:src="@drawable/wwyt_lc"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+    android:src="@drawable/wwyt_xjyw_lc1_01"/>
+        <ImageView
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:scaleType="fitXY"
+            android:layout_height="wrap_content"
+            android:src="@drawable/wwyt_xjyw_lc1_02"/>
+
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
