新增春秋检

--- a/app/src/main/res/layout/fragment_adssguang_lan.xml
+++ b/app/src/main/res/layout/fragment_adssguang_lan.xml
@@ -116,10 +116,5 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/transparent"
-        android:dividerHeight="-1dp"/>
+    <include layout="@layout/common_list_view"/>
 </LinearLayout>
