--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -101,4 +101,44 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="radio_group_common">
+        <item name="android:layout_width">300px</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="common_left_radio_button">
+        <item name="android:layout_marginLeft">10px</item>
+        <item name="android:layout_width">120px</item>
+        <item name="android:layout_height">50px</item>
+        <item name="android:background">@drawable/radio_left</item>
+        <item name="android:checked">true</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@null</item>
+    </style>
+
+    <style name="common_right_radio_button">
+        <item name="android:layout_marginLeft">2px</item>
+        <item name="android:layout_width">120px</item>
+        <item name="android:layout_height">50px</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/radio_right</item>
+        <item name="android:button">@null</item>
+    </style>
+
+    <style name="divider_linearlayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:divider">@drawable/divider_line</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:showDividers">middle</item>
+    </style>
 </resources>
